// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Status Card renders a basic status card 1`] = `
"

<article class="sas-card">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Foo</h3>
    
	</header>

	<div class="sas-card__footer">
		

		
	</div>
</article>
"
`;

exports[`Components Status Card renders a status card with full information 1`] = `
"

<article class="sas-card">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Foo</h3>
    <strong class="govuk-tag govuk-tag--red">Bar</strong>
	</header>

	<div class="sas-card__footer">
		
			

  
<dl class="govuk-summary-list sas-card-summary-list govuk-summary-list--no-border">

  
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Baz
    </dt>
    <dd class="govuk-summary-list__value">
      Qux
    </dd>
    
  </div>
  

</dl>

		

		
			<div class="sas-card__links">
				
					<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#">Quux</a>
				
			</div>
		
	</div>
</article>
"
`;

exports[`Components Status Card renders an inactive status card 1`] = `
"

<article class="sas-card sas-card--inactive">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Foo</h3>
    
	</header>

	<div class="sas-card__footer">
		

		
	</div>
</article>
"
`;
